# cookiecutter-poetic-python

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  tox.ini
hooks/: post_gen_hooks.py  post_gen_project.py
source/: conf.py  index.rst
{{ cookiecutter.project_short_name }}/: .gitignore  LICENSE  tox.ini
{{ cookiecutter.project_short_name }}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{ cookiecutter.project_short_name }}/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/: .gitignore  AUTHORS.rst  CHANGELOG.rst  README.rst  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/.github/workflows/: check_formatting.yml  check_linting.yml  docs.yml  format.yml  install.yml  lint.yml  package.yml  tests.yml
{{ cookiecutter.project_slug }}/docs/: conf.py  getting_started.rst  index.rst  modules.rst  {{ cookiecutter.project_slug }}.rst
{{ cookiecutter.project_slug }}/docs/appendix/: authors.rst  index.rst
{{ cookiecutter.project_slug }}/docs/design/: index.rst
{{ cookiecutter.project_slug }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug.replace('_', '-') }}/: .gitignore  AUTHORS.md  README.md  pyproject.toml  release.config.js  tox.ini
{{ cookiecutter.project_slug.replace('_', '-') }}/.github/: issue_template.md
{{ cookiecutter.project_slug.replace('_', '-') }}/.github/workflows/: docs.yml  format.yml  install.yml  lint.yml  package.yml  pages.yml  pr_title_check.yml  release.yml  tests.yml  type_check.yml
{{ cookiecutter.project_slug.replace('_', '-') }}/docs/: api.rst  index.rst
{{ cookiecutter.project_slug.replace('_', '-') }}/docs/user_manual/: index.rst
{{ cookiecutter.project_slug.replace('_', '-') }}/src/{{ cookiecutter.project_slug.replace('-', '_').replace(' ', '_') }}/: __init__.py
{{ cookiecutter.project_slug.replace('_', '-') }}/tests/: test_{{ cookiecutter.project_slug.replace(' ', '-').replace('-', '_') }}.py
