[tool.poetry]
name = "cookiecutter-poetic-python"
version = "0.1.0"
description = "A cookiecutter template for Python using the Poetry project manager"
authors = ["Jan Bronicki <janbronicki@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
# TODO: make it work for min 3.7
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox = "^3.24.5"
black = "^22.1.0"
mkdocs = "^1.2.3"
pylint = "^2.12.2"
pytest = "^7.0.1"
isort = "^5.10.1"
cookiecutter = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




# Configure tools for linting and formatting

# max line length of a Python file
# MAX_LINE_LENGTH = 88

[tool.flake8]
max-line-length = 88

[tool.pylint]
max-line-length = 88
max-complexity = 10
disable = "E203, W0621"


[tool.isort]
profile = "black"
line-length = 88

[tool.black]
line-length = 88
