[tool.poetry]
name = "{{ cookiecutter.project_slug.replace(' ', '-') }}"
# Do not touch the version
# Is is edited dynamically by the CI job
# It should remain as 0.0.0
version = "0.0.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>",]
readme = "README.md"
# homepage = ""
# repository = ""

[tool.poetry.dependencies]
python = ">=3.9, <4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
